# android-wmon-core

./: .gitmodules
android-ndk-r7b-macosx/: ndk-stack
android-ndk-r8b-linux/: ndk-stack
android-ndk-r8b-macosx/: RELEASE.TXT  ndk-stack
android-sdk-linux/: pull_platform_tools.rb  pull_platform_tools.sh
android-sdk-macosx/: pull_platform_tools.sh
android-wireshark/: AUTHORS-SHORT  CMakeLists.txt  CMakeOptions.txt  CPackConfig.txt  Makefile  Makefile.am  Makefile.am.inc  Makefile.common  Makefile.in  Makefile.nmake  README.DECT  README.bsd  README.cmake  aclocal.m4  agcc  autogen.sh  build_clean.sh  build_libtshark.sh  capinfos.c  capture-pcap-util-unix.c  capture-pcap-util.c  capture.c  capture_info.c  capture_opts.c  capture_sync.c  cfile.c  color_filters.c  config.h  config.nmake  config.status  configure  dftest.c  disabled_protos.c  dumpcap.c  editcap.c  file.c  hello  hello.c  libtool  libtool.good  (+31 more)
android-wireshark/packaging/nsis/: Makefile  Makefile.am  Makefile.in
compat-wireless-2012-04-15/: MAINTAINERS  code-metrics.txt  compat_base_tree_version  compat_version  make.sh
compat-wireless-2012-04-26/: MAINTAINERS  Makefile  code-metrics.txt  compat_version  config.mk  make.sh  master-tag
compat-wireless-2012-05-10/: .compat_version  MAINTAINERS  Makefile  code-metrics.txt  make.sh  master-tag
compat-wireless-3.0.9-1/: Makefile  code-metrics.txt  compat_version  config.mk  make.sh
compat-wireless-3.5.1-1/: .compat_base  .compat_version  Makefile  code-metrics.txt  make.sh
compat-wireless-3.6-rc7-1/: code-metrics.txt  config.mk  make.sh
(+2680 files in other folders)
