# $Id: Makefile.am 34996 2010-11-21 19:03:17Z wmeier $
#
MAINTAINERCLEANFILES = \
	Makefile.in

EXTRA_DIST = \
	wireshark.nsi	\
	GetWindowsVersion.nsh \
	servicelib.nsh \
	VersionCompare.nsh \
	AdditionalTasksPage.ini \
	WinPcapPage.ini \
	WinPcap_4_1_2.exe \
	Makefile.nmake \
	Custom.nmake \
	custom_plugins.txt
